# PowerPlayer

./: .gitignore  CMakeLists.txt  README.md
src/: ff.c  ff.h  main.c  main.cpp  player.c  player.h
src/console/: Console.cpp  Console.hpp  ConsoleWindow.cpp  ConsoleWindow.hpp  InitConsole.cpp  MacUtils.h
src/ff/: ff.c
src/module/: module.c  module.h  multimedia.c  png.c
